--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/williamhickok11/musichistory-boilerplate#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
+    "lodash.assign": "^4.0.6",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
